# prom-docker-discovery

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  agent.py  docker-compose.yml  pyproject.toml  requirements.txt  server.py
.gitea/workflows/: docker.yaml
dockerfiles/: agent.Dockerfile  server.Dockerfile
scripts/: export_requirements.sh
