[project]
name = "prom-docker-discovery"
version = "0.1.0"
description = ""
authors = [
    {name = "estebanthi",email = "esteban.thilliez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "prometheus-client (>=0.22.1,<0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.16.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
